Table td th vertical align fix

--- a/custom.css
+++ b/custom.css
@@ -10,6 +10,7 @@
     .tablefullbg table td, .tablefullbg table th {
     border: 1px solid #F8F8F8;
     text-align: center;
+    vertical-align: middle;
     }
       
     figure.wp-block-table.tablefullbg {
@@ -46,6 +47,7 @@
     border: 1px solid #F8F8F8;
     border-radius: 15px;
     }
+    
     
     
 
